samples/_failures_safe/1761354428_7db2c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_531273b0.c: In function ‘main’:
./samples/SAFE/__tmp_531273b0.c:151:34: error: expected ‘)’ at end of input
  151 |             strlen(message_buffer
      |                   ~              ^
      |                                  )
./samples/SAFE/__tmp_531273b0.c:151:13: error: expected declaration or statement at end of input
  151 |             strlen(message_buffer
      |             ^~~~~~
./samples/SAFE/__tmp_531273b0.c:151:13: error: expected declaration or statement at end of input
